fix(styles): match spacing of Header, Side and BackToTop

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ p {
 
 @layer components {
   .dpx {
-    @apply px-4 sm:px-12 sm:pr-24 md:px-24 lg:px-40;
+    @apply px-4 sm:px-12 sm:pr-[120px] md:px-24 lg:px-40;
   }
   .dpy {
     @apply py-4 sm:py-12 md:py-24 lg:py-40;
